--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <artifactId>spring-orm</artifactId>
             <version>4.3.3.RELEASE</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>   
+        
         <!-- Spring Security Artifacts - START -->
         <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
         <dependency>
@@ -193,7 +200,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.1</version>
-        </dependency>       
+        </dependency>  
+        
+               
         
     </dependencies>
 
